@@ -1,16 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
+DIST event-1.11.1.tgz 78942 SHA256 371e8d559461542058efd57be61fd8316121985dc455f2e7979722e37cedd526 SHA512 95db37aa339b7530b3636835191be12eceefa23e2b511b84c7654556145ce1e198bb81299380bb742b1edfc0e32222c96d81f5f2f6f2f19d41d636dc9f517480 WHIRLPOOL d0a1104d418a218e0b4311b02d05ae2a8e47ab3039047a2bae320d7e19f87b4aade28c0755741077e9380d29cdc626a250c75dd7fe75bffb6ac3ca235a5435c2
 DIST event-1.7.8.tgz 69828 SHA256 3b637b3c66c8e2311c16e79fb8e90a7a02bd0df08a25514d1445f1e648d1c58a SHA512 1f2128d2a7f84ad4a3b761dfb63ae5932ffe8b5b5faa20f8d0fc17ede807b5c44a6fe8589a0257fe7d4313f6c2df5332519a4c2bab9fb498c36cdf53564b5117 WHIRLPOOL 7cf81434e3d1b2c92adb9d2667f4fea77bbb16bac6771f7e85fcf69cae54729cc9a7cc1f1b1670c667a679037cf40aa37d78a2713cd1c1e919e5bf272cb0211a
 DIST event-1.8.0.tgz 71640 SHA256 34ecc3f2367ac843b1764e9939cc511646364985165d743d538ff55043551682 SHA512 11d3deef376b699d9bab4477f1075a9464a5247048472a856ef8ebd74fa56dee8750c308fa615a08289d1d17415847a6671916ea11d0a6dd8781064aca6b7414 WHIRLPOOL a4addd4b250ca58186702edf926133bea2bb6f4d297f669cc794f9fc511ffc8f6e2904ca1c9f0418421356ce4b4505e646beec5003cd93e92c6af0373ed057ad
+EBUILD pecl-event-1.11.1.ebuild 1048 SHA256 5db6cbb50eaf3daa662b2b62b4d8eaa75caa4728d7b5316c6416dbc25779b0c1 SHA512 71185544c21be6e575eea9ed25344c99cde454d072f1bfe5fbfc6fa388766c6dc6bdcf6fd071bb80993a3f9a252aa780e8824e8a789271adeea240e205ca4835 WHIRLPOOL 2860f4797345ee163802deaacfe6cd4eb253e0d8d3cd4c2fc3716f3c9182eb95509647b0a79fb4e23d3efd5a06811f79aee83a43592535da880d62257d926496
 EBUILD pecl-event-1.7.8.ebuild 1037 SHA256 3eb7efa955b0510825dd92e880f912f13a2021cdebe2ea768229f45db045e9cc SHA512 e645121bdcb997470bfbd3e008effd00f91e546697ba07053524042757545837cd42a63d4789fdb4b22282d787a09136756bb835a268d73e09fd549e9f8c5a25 WHIRLPOOL b7e01f6881711164a1470d3f33f589440d8995c7d5970916d32aef481cc0d452f0eb9b457facabfbd5a4c6d21177fea2625b4fe6ad8eabe2675ee07f24665fa7
 EBUILD pecl-event-1.8.0.ebuild 1034 SHA256 ab35d147eae3b013f3f0095e6ea3bd0cc358dbbbb855576f4af90e2c73ae4477 SHA512 683dade0e3d6810493fb020ede7237a46f56ea7fb92348d1f2d9cb548ce00368510beaefc0b53b5b11539beebbb7a41a75219722533b08db091310a049fd9c70 WHIRLPOOL bc54191f99bdd88794eb41679948066728013a31517ada116e7b39d599e3ad908be056ff5177a0c2856ce937298c6a4c6e45374749586639b9b3790cc411fb1a
-MISC ChangeLog 952 SHA256 ef02830dc7c2598e2339c301abdd36ee08eb5e25bed990b984662f04a65d579c SHA512 4dd2a985d4542881469521c408160b3759df9dd298f15709575a57b0635c829b27ecf3bc5d23497c8ef6b92c03a89f44de5ef9279b2f46da733de78e70fb757c WHIRLPOOL 843ad0a2b277aafcc754a4c6d0da1e8fdd9fed32c0e254cae9e4710a858a91bbe84305dd366d1c608c1c6ba6bcabbd4f3ff11a94ab944a0d7e2473af758e9151
+MISC ChangeLog 1110 SHA256 e7c2262d66cc7e2657bc535a43aea8af5a84524ef09cada03eb0c1ebc612e920 SHA512 60b39fce343ac6f457614420e50411bd6e59bb9e00f5bf2e48c8a556da06868f5cd1cdcba540d7624e2b52b72478ff5063cbdfddc78281fcf7d6a9221c523b2b WHIRLPOOL 3b35697733afd5bebb7295226e667b8fd3310b2a427d31d69704b26fd3595f9e500bb27d0a6ee8362c35715ff97c8de055db9e3d8dd00f539f747dde2d79ffa8
 MISC metadata.xml 395 SHA256 e90b676fc15747ce1e50210eb687ca87c96b2a70e67b3d2787de1c6b12477e92 SHA512 cc31c6885102882c3caa76bb165dcb01d2d0f37f3f4ff15e107e5b976642f98c65b2780a71e81c559e6c1eff8d2227c8fd9a3ec91e7a85cabe1105d1ec113103 WHIRLPOOL 69a7473f4aa78b2710d4eef4c8dbf6c518121cacd1219e6f99c2749e851609b9866be0b9bc29c57f91a3f84f18cb0189ad9357c5ac4ddf01d6e3c57137ef2312
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iEYEAREIAAYFAlLaybkACgkQCaWpQKGI+9TTGQCeJRXXShqp2mcoqKB9oBZCt7Ry
-4KgAoIMzUdxIm1AgHZk4Rop5iSTJ/Gt+
-=ULMT
+iQJ8BAEBCABmBQJUbN/uXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
+OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun888NoP/jv4GJ9iShzhISofzAEy2nlB
+VQU5UHV9og2kN6CX2Tb6eO52pFvOZ7QwabJ+dvQGov+PPJMV2x4K3APsxz9QwiKZ
+LnFnError/h9F5z6HW4LfTz0Zlz0eU8Dgu/Yqut6GOc8IbpdIgDYhpIB+UB0myUI
+MV0QtZI4dHH7n3S2+mkV4Q7X1uJ7U5Rv7NxjGHhn3AI83Ic1VjM3W4okaWOv+SYW
+712k3w6AxOSTyBtuM0r/9c+s7lU0xttCFeXLy6+pnbc9CiTc3myFNXttkubi3HCU
+IaA/D1QKCxaqj++Y9fF+ZJmkRPcVqjM16JpXK8a3+kMAPKzz9vuuzldTeXs371bl
+mOqBY8YZ/JsZuXHmqTHJkdq9HRCBicMU6AAV1CPPG6c5gyYEhXzmisfNpRgNznb+
+SI/yAZC4B9FbRlHWz5oY9vJ54Ki0/KqvlSqnmPkcgOY8wa0ZMb+84fcE5fnRDK4f
+Y+2BJlewdKZIs4+N8/uSGOFIq1TwSKGpKfxGUP1sIr9ZuW7UTeNfOnbzejfDZG29
+b8voFALZ9RSKHGStuCxg8ewVaupy4GVPVaW1LFV5PLHU+AVFB6x3hmeO8xfkUwY/
+X+ILxNGYGPZosbebJ/c/9QmF5JCqim5xyVJe04mcidvQjiGK8pYfBBseFl1ho4fF
+9dbZlQ7FoinSEba6GlkW
+=n0Ue
 -----END PGP SIGNATURE-----
