@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=>=dev-libs/libevent-2.0.2 !dev-php/pecl-libevent sockets? ( dev-lang/php[sockets] ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.14:1.14 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4 >=sys-devel/m4-1.4.3 >=sys-devel/libtool-1.5.18 php_targets_php5-4? ( dev-lang/php:5.4 ) php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-6? ( dev-lang/php:5.6 )
+DESCRIPTION=PHP wrapper for libevent2
+EAPI=5
+HOMEPAGE=http://pecl.php.net/event
+IUSE=debug +extra +ssl threads +sockets examples php_targets_php5-4 php_targets_php5-5 php_targets_php5-6
+KEYWORDS=~amd64 ~ia64 ~x86
+LICENSE=PHP-3
+RDEPEND=>=dev-libs/libevent-2.0.2 !dev-php/pecl-libevent sockets? ( dev-lang/php[sockets] ) php_targets_php5-4? ( dev-lang/php:5.4 ) php_targets_php5-5? ( dev-lang/php:5.5 ) php_targets_php5-6? ( dev-lang/php:5.6 )
+REQUIRED_USE=|| ( php_targets_php5-4 php_targets_php5-5 php_targets_php5-6 )
+SLOT=0
+SRC_URI=http://pecl.php.net/get/event-1.11.1.tgz
+_eclasses_=autotools	7bcca47e6ac6bbfa251fe7e9483fcf67	confutils	2ab69b52fa6ea0c0669a47fb94b354b4	eutils	6faef4c127028ccbba3a11400d24ae34	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	php-ext-pecl-r2	de1308bcf4fef59a8ee8793efc7c3051	php-ext-source-r2	39437168059a2166e012420b3ba12815	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
+_md5_=442c04ee89db3dce3bacb8286c7503a1
