@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9552 2014/11/19 05:32:53 zerochaos Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.9553 2014/11/19 18:16:28 ulm Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  19 Nov 2014; Ulrich Müller <ulm@gentoo.org> package.mask:
+  Remove mask for app-emacs/csharp-mode. Package is fixed and won't be removed.
 
   19 Nove 2014; Rick Farina <zerochaos@gentoo.org> package.mask:
   Remove net-misc/ieee-oui mask as it has been removed.
