@@ -1,6 +1,11 @@
 # ChangeLog for dev-php/pecl-event
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-event/ChangeLog,v 1.5 2014/01/18 18:36:40 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-event/ChangeLog,v 1.6 2014/11/19 18:22:38 hwoarang Exp $
+
+*pecl-event-1.11.1 (19 Nov 2014)
+
+  19 Nov 2014; Markos Chandras <hwoarang@gentoo.org> +pecl-event-1.11.1.ebuild:
+  Version bump thanks to Ruslan Osmanov
 
   18 Jan 2014; Pacho Ramos <pacho@gentoo.org> pecl-event-1.8.0.ebuild:
   amd64 stable, bug #487120
